<resources>
    <string name="app_name">JobGet Ledger</string>

    <string name="expenses">Expenses</string>
    <string name="income">Income</string>
    <string name="balance">Balance</string>

    <string name="transaction_type">Transaction Type</string>
    <string name="transaction_desc">Transaction Description</string>
    <string name="add">Add</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="dollar_symbol">$</string>

    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this Item?</string>
    <string name="delete_dialog_yes">Yes</string>
    <string name="delete_dialog_no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>