<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".InputFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/all_rounded_shape"
        android:layout_marginLeft="@dimen/super_margin"
        android:layout_marginRight="@dimen/super_margin"
        android:orientation="vertical"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_margin"
            android:gravity="center"
            android:textSize="@dimen/big_textsize"
            android:text="@string/add_transaction"
            />
        <Spinner
            android:id="@+id/transaction_spinner"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/extra_margin"
            android:prompt="@string/transaction_type"
            />

        <EditText
            android:id="@+id/transaction_desc_edt"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:textSize="@dimen/normal_textsize"
            android:layout_marginTop="@dimen/extra_margin"
            android:paddingLeft="@dimen/medium_margin"
            android:background="@drawable/small_rounded_shape"
            android:hint="@string/transaction_desc"
            />
        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/extra_margin"
            >
            <EditText
                android:id="@+id/value_edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="@dimen/super_margin"
                android:background="@drawable/small_rounded_shape"
                android:textSize="@dimen/normal_textsize"
                android:inputType="number"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/extra_margin"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:text="@string/dollar_symbol"
                android:textSize="@dimen/big_textsize"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/add_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/add"
            android:layout_marginTop="@dimen/extra_margin"
            android:layout_marginBottom="@dimen/extra_margin"
            />

    </LinearLayout>

</LinearLayout>