<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/all_rounded_shape"
            android:padding="@dimen/round_radius"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/minor_margin"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/normal_textsize"
                        android:text="@string/expenses"
                        android:gravity="center"
                        />
                    <TextView
                        android:id="@+id/expenses_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:textSize="@dimen/normal_textsize"
                        android:gravity="center"
                        />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black_alpha_thirty"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/normal_textsize"
                        android:text="@string/income"
                        android:gravity="center"
                        />
                    <TextView
                        android:id="@+id/income_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:textSize="@dimen/normal_textsize"
                        android:gravity="center"
                        />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/black_alpha_thirty"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="@dimen/normal_textsize"
                        android:text="@string/balance"
                        />
                    <TextView
                        android:id="@+id/balance_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:textSize="@dimen/normal_textsize"
                        android:gravity="center"
                        />
                </LinearLayout>
            </LinearLayout>
            <ProgressBar
                android:id="@+id/balance_progress"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:layout_margin="@dimen/big_margin"
                android:maxHeight="10dp"
                android:minHeight="10dp"

                android:background="@drawable/progress_shape"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/black_alpha_thirty"
                android:progress="10"
                android:max="100"
                />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/minor_margin"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/minor_margin"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/extra_margin"
            />
    </LinearLayout>
    <Button
        android:id="@+id/add_btn"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/add"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/extra_margin"
        android:layout_marginBottom="@dimen/extra_margin"
        />
</RelativeLayout>